--- a/index.html
+++ b/index.html
@@ -3,12 +3,26 @@
   <meta name="description" content="Final Project for HTML5/CSS3 Course">
   <meta name="keywords" content="HTML,CSS,JavaScript,jQuery">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Shandira's Art Box</title>
+  <title>Shandira Ferguson | UI/UX Designer & Software Engineer </title>
   <link rel="stylesheet" type="text/css" href="./assets/stylesheets/styles.css" />
 </head>
 <body>
+  <!-- <div class="flex-container">
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+  </div> -->
+  <header id="header" style= "opacity: 1; top: 0px">
+    <div class="row">
+      <div class="col-12">
+        <h4> Logo | Shandira Ferguson</h4>
+        <!-- <a id="logo" class="logo" href="http://www.shandirafergusonart.com">Shandira Ferguson</a> -->
+        <!-- <div class="icon-nav">navigation</div> -->
+      </div>
+    </div>
+  </header>
   <div class="video-overlay">
-    <img class="animated-gif" src="./assets/videos/home/home-motherhood.gif">
+    <!-- <img class="animated-gif" src="./assets/videos/home/home-motherhood.gif"> -->
     <!-- <img class="full-background-image-container" src="./assets/videos/home/home-motherhood3.gif" alt="Motherhood GIF example" /> -->
     <video class="video-container" autoplay muted playsinline>
       <source src="./assets/videos/home/motherhood2.mp4" type="video/mp4">
@@ -20,4 +34,16 @@
       Your browser does not support the video tag.
     </video>
   </div>
+  <div class="text">
+    <p> ----------------- SOME OF MY ANIMATIONS ------------------------ </p>
+  </div>
+  <footer id="footer">
+    <div class="row">
+      <div class="col-12">
+        <div class="left">
+          <h4> c 2020 Shandira Ferguson</h4>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
