--- a/index.html
+++ b/index.html
@@ -13,18 +13,36 @@
     <div>3</div>
   </div> -->
   <header id="header" style= "opacity: 1; top: 0px">
-    <div class="row">
-      <div class="col-12">
-        <h4> Logo | Shandira Ferguson</h4>
-        <!-- <a id="logo" class="logo" href="http://www.shandirafergusonart.com">Shandira Ferguson</a> -->
-        <!-- <div class="icon-nav">navigation</div> -->
-      </div>
-    </div>
+    <!-- <ul>
+        <li><a href="#logo">logo</a></li>
+        <li>Shandira Ferguson</li>
+    </ul> -->
+    <!-- <h4> Logo | Shandira Ferguson</h4> -->
+    <ul>
+      <li><a href="#popups">in</a></li>
+      <li><a href="#popups">email-logo</a></li>
+      <li><a href="#popups">pop-ups</a></li>
+      <li><a href="#sketches">sketches</a></li>
+      <li><a href="#process">process</a></li>
+      <li><a href="#projects">projects</a></li>
+      <li><a href="#about">about</a></li>
+      <li style="float:left;"><a href="#SF"> Logo Img </a></li>
+      <li style="float:left;"><a href="#SF">| Shandira Ferguson</a></li>
+    </ul>
   </header>
   <div class="video-overlay">
-    <!-- <img class="animated-gif" src="./assets/videos/home/home-motherhood.gif"> -->
+    <img class="animated-gif" src="./assets/videos/home/home-motherhood.gif">
     <!-- <img class="full-background-image-container" src="./assets/videos/home/home-motherhood3.gif" alt="Motherhood GIF example" /> -->
-    <video class="video-container" autoplay muted playsinline>
+  </div>
+  <div class="text">
+    <h4> _______________________________________ SOME OF MY ANIMATIONS _______________________________________</h4>
+  </div>
+  <div class="flex-container">
+    <div>Vid 1</div>
+    <div>Vid 2</div>
+    <div>Vid 3</div>
+  </div>
+    <!-- <video class="video-container" autoplay muted playsinline>
       <source src="./assets/videos/home/motherhood2.mp4" type="video/mp4">
       </source>
       <source src="./assets/videos/home/Ford-Mustang-Mach-E.mp4" type="video/mp4">
@@ -32,11 +50,7 @@
       <source src="./assets/videos/home/Ford-Mustang-Mach-E.ogg" type="video/ogg">
       </source>
       Your browser does not support the video tag.
-    </video>
-  </div>
-  <div class="text">
-    <p> ----------------- SOME OF MY ANIMATIONS ------------------------ </p>
-  </div>
+    </video> -->
   <footer id="footer">
     <div class="row">
       <div class="col-12">
