home page final
To be continued...

--- a/index.html
+++ b/index.html
@@ -27,8 +27,31 @@
     <div>
         <img class="animated-gif" src="./assets/videos/home/home-motherhood.gif">
     </div>
-    <div>
-        <p class="textInfo">SOME OF MY ANIMATIONS</p>
+    <div style="width:800px; margin:0 auto;">
+      <div class="line"></div>
+      <div style=display:inline-block;"><h3 class="textInfo">SOME OF MY ANIMATIONS</h3></div>
+      <div class="line"></div>
     </div>
+    <div class="vids">
+      <ul>
+        <li>VidSample
+          <iframe src="https://www.youtube.com/embed/2F9pL06IC8k" frameborder="0" allowfullscreen></iframe>
+        </li>
+        <li>VidSample
+          <iframe src="https://www.youtube.com/embed/2F9pL06IC8k" frameborder="0" allowfullscreen></iframe>
+        </li>
+        <li>VidSample
+          <iframe src="https://www.youtube.com/embed/2F9pL06IC8k" frameborder="0" allowfullscreen></iframe>
+        </li>
+      </ul>
+    </div>
+    <footer class="footer">
+      <a style="float:left">c 2020 Shandira Ferguson</a>
+      <!-- <a href="#pop-ups">pop-ups</a>
+      <a href="#sketches">sketches</a>
+      <a href="#process">process</a>
+      <a href="#projects">projects</a>
+      <a href="#about">about</a> -->
+    </footer>
 </body>
 </html>
