About + Projects page added
Init setup + minor changes to prev files

--- a/process.html
+++ b/process.html
@@ -10,11 +10,10 @@
     <link rel="stylesheet" type="text/css" href="./assets/stylesheets/styles.css" />
     <script src="./assets/javascripts/responsive-nav-bar.js"></script>
   </head>
-
   <body>
 
     <div class="topnav" id="myTopNav">
-      <a class="link topnav_link" href="#icon" class="active" style="float:left">LogoIcon</a>
+      <a class="link topnav_link" href="index.html" class="active" style="float:left">LogoIcon</a>
       <a class="link topnav_link topnav__disableClick" style="float:left"> | </a>
       <a class="link topnav_link topnav__disableClick" style="float:left" >Shandira Ferguson</a>
       <a class="link topnav_link" href="#linkedIn icon">in</a>
@@ -27,34 +26,14 @@
       <a class="link topnav_link fa icon" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
     </div>
 
-      <div>
-          <img class="animated-gif" src="./assets/videos/home/home-motherhood.gif">
-      </div>
-      <div style="width:800px; margin:0 auto;">
-        <div class="line"></div>
-        <div style=display:inline-block;"><h3 class="textInfo">SOME OF MY ANIMATIONS</h3></div>
-        <div class="line"></div>
-      </div>
-      <div class="vids">
-        <ul>
-          <li>VidSample
-            <iframe src="https://www.youtube.com/embed/2F9pL06IC8k" frameborder="0" allowfullscreen></iframe>
-          </li>
-          <li>VidSample
-            <iframe src="https://www.youtube.com/embed/2F9pL06IC8k" frameborder="0" allowfullscreen></iframe>
-          </li>
-          <li>VidSample
-            <iframe src="https://www.youtube.com/embed/2F9pL06IC8k" frameborder="0" allowfullscreen></iframe>
-          </li>
-        </ul>
-      </div>
-      <footer class="footer">
-        <a style="float:left">c 2020 Shandira Ferguson</a>
-        <a href="#pop-ups">pop-ups</a>
-        <a href="#sketches">sketches</a>
-        <a href="#process">process</a>
-        <a href="#projects">projects</a>
-        <a href="#about">about</a>
-      </footer>
+
+    <footer class="footer">
+      <a style="float:left">c 2020 Shandira Ferguson</a>
+      <a href="#pop-ups">pop-ups</a>
+      <a href="#sketches">sketches</a>
+      <a href="#process">process</a>
+      <a href="#projects">projects</a>
+      <a href="#about">about</a>
+    </footer>
   </body>
 </html>
