--- a/about.html
+++ b/about.html
@@ -7,24 +7,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Shandira Ferguson | UI/UX Designer & Software Engineer </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="./assets/stylesheets/styles.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/stylesheets/styles.css"/>
     <script src="./assets/javascripts/responsive-nav-bar.js"></script>
   </head>
   <body>
 
-    <div class="topnav" id="myTopNav">
-      <a class="link topnav_link" href="index.html" class="active" style="float:left">LogoIcon</a>
-      <a class="link topnav_link topnav__disableClick" style="float:left"> | </a>
-      <a class="link topnav_link topnav__disableClick" style="float:left" >Shandira Ferguson</a>
-      <a class="link topnav_link" href="#linkedIn icon">in</a>
-      <a class="link topnav_link" href="#emailIcon">email</a>
-      <a class="link topnav_link" href="#pop-ups">pop-ups</a>
-      <a class="link topnav_link" href="#sketches">sketches</a>
-      <a class="link topnav_link" href="#process.html">process</a>
-      <a class="link topnav_link" href="#projects">projects</a>
-      <a class="link topnav_link" href="about.html">about</a>
-      <a class="link topnav_link fa icon" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
-    </div>
+      <div class="topnav" id="myTopNav">
+        <a class="link topnav_link" href="index.html" class="active"
+            style="float:left">LogoIcon</a>
+        <a class="link topnav_link topnav__disableClick" style="float:left">
+            | </a>
+        <a class="link topnav_link topnav__disableClick" style="float:left">
+            Shandira Ferguson</a>
+        <a class="link topnav_link" href="#linkedIn icon">in</a>
+        <a class="link topnav_link" href="#emailIcon">email</a>
+        <a class="link topnav_link" href="#pop-ups">pop-ups</a>
+        <a class="link topnav_link" href="#sketches">sketches</a>
+        <a class="link topnav_link" href="#process.html">process</a>
+        <a class="link topnav_link" href="#projects">projects</a>
+        <a class="link topnav_link" href="about.html">about</a>
+        <a class="link topnav_link fa icon" href="javascript:void(0);"
+            style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
+      </div>
+
+    <section class="sec intro-sec">
+      <div class="intro intro--img">
+          <h1 class="intro__h1">about me</h1>
+          <h2 class="intro_h2">I'm a UI/UX Software Engineer from the Bahamas!</h2>
+          <h3 class="intro_h3">I'm passionate about problem solving, design,
+            and advocating for the user. When I'm not coding, sketching, or
+            obsessing over Augmented Reality, you'll find me working out at the
+            gym, cooking, or at the nearest Carnival Festival. </h3>
+      </div>
+    </section>
 
 
 
