--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
   <body>
 
     <div class="topnav" id="myTopNav">
-      <a class="link topnav_link" href="#icon" class="active" style="float:left">LogoIcon</a>
-      <a class="link topnav_link topnav__disableClick" style="float:left"> | </a>
-      <a class="link topnav_link topnav__disableClick" style="float:left" >Shandira Ferguson</a>
-      <a class="link topnav_link" href="#linkedIn icon">in</a>
-      <a class="link topnav_link" href="#emailIcon">email</a>
-      <a class="link topnav_link" href="#pop-ups">pop-ups</a>
-      <a class="link topnav_link" href="#sketches">sketches</a>
-      <a class="link topnav_link" href="#process.html">process</a>
-      <a class="link topnav_link" href="#projects">projects</a>
-      <a class="link topnav_link" href="about.html">about</a>
-      <a class="link topnav_link fa icon" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
+      <a class="link topnav__link" href="#icon" class="active" style="float:left">LogoIcon</a>
+      <a class="link topnav__link disableClick" style="float:left"> | </a>
+      <a class="link topnav__link disableClick" style="float:left" >Shandira Ferguson</a>
+      <a class="link topnav__link" href="#linkedIn icon">in</a>
+      <a class="link topnav__link" href="#emailIcon">email</a>
+      <a class="link topnav__link" href="#pop-ups">pop-ups</a>
+      <a class="link topnav__link" href="#sketches">sketches</a>
+      <a class="link topnav__link" href="#process.html">process</a>
+      <a class="link topnav__link" href="#projects">projects</a>
+      <a class="link topnav__link" href="about.html">about</a>
+      <a class="link topnav__link fa icon" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
     </div>
 
       <div>
@@ -32,7 +32,9 @@
       </div>
       <div style="width:800px; margin:0 auto;">
         <div class="line"></div>
-        <div style=display:inline-block;"><h3 class="textInfo">SOME OF MY ANIMATIONS</h3></div>
+        <div style="display:inline-block;">
+          <h3 class="textInfo">SOME OF MY ANIMATIONS</h3>
+        </div>
         <div class="line"></div>
       </div>
       <div class="vids">
@@ -49,12 +51,14 @@
         </ul>
       </div>
       <footer class="footer">
-        <a style="float:left">c 2020 Shandira Ferguson</a>
-        <a href="#pop-ups">pop-ups</a>
-        <a href="#sketches">sketches</a>
-        <a href="#process">process</a>
-        <a href="#projects">projects</a>
-        <a href="#about">about</a>
+        <a class="link footer__link disableClick" style="float:left">c 2020 Shandira Ferguson</a>
+        <div class="center-block">
+          <a class="link footer__link" href="#pop-ups">pop-ups</a>
+          <a class="link footer__link" href="#sketches">sketches</a>
+          <a class="link footer__link" href="#process">process</a>
+          <a class="link footer__link" href="#projects">projects</a>
+          <a class="link footer__link" href="#about">about</a>
+        </div>
       </footer>
   </body>
 </html>
