index.html touches
#WIP

--- a/index.html
+++ b/index.html
@@ -30,13 +30,15 @@
       <div>
           <img class="animated-gif" src="./assets/videos/home/home-motherhood.gif">
       </div>
-      <div style="width:800px; margin:0 auto;">
+
+      <div class="anim-text-block" style="width:800px; margin:0 auto;">
         <div class="line"></div>
         <div style="display:inline-block;">
-          <h3 class="textInfo">SOME OF MY ANIMATIONS</h3>
+          <h3 class="anim-text">SOME OF MY ANIMATIONS</h3>
         </div>
         <div class="line"></div>
       </div>
+
       <div class="vids">
         <ul>
           <li>VidSample
@@ -50,8 +52,11 @@
           </li>
         </ul>
       </div>
+
       <footer class="footer">
-        <a class="link footer__link disableClick" style="float:left">c 2020 Shandira Ferguson</a>
+        <a class="link footer__link disableClick" style="float:left;
+          color: black;">c 2020 Shandira Ferguson <br> <span style="font-size:10px;
+          font-weight:lighter; float:right">Inspired by Adham Dannaway</span></a>
         <div class="center-block">
           <a class="link footer__link" href="#pop-ups">pop-ups</a>
           <a class="link footer__link" href="#sketches">sketches</a>
