--- a/about.html
+++ b/about.html
@@ -10,46 +10,53 @@
     <link rel="stylesheet" type="text/css" href="./assets/stylesheets/styles.css"/>
     <script src="./assets/javascripts/responsive-nav-bar.js"></script>
   </head>
+
   <body>
 
-      <div class="topnav" id="myTopNav">
-        <a class="link topnav_link" href="index.html" class="active"
-            style="float:left">LogoIcon</a>
-        <a class="link topnav_link topnav__disableClick" style="float:left">
-            | </a>
-        <a class="link topnav_link topnav__disableClick" style="float:left">
-            Shandira Ferguson</a>
-        <a class="link topnav_link" href="#linkedIn icon">in</a>
-        <a class="link topnav_link" href="#emailIcon">email</a>
-        <a class="link topnav_link" href="#pop-ups">pop-ups</a>
-        <a class="link topnav_link" href="#sketches">sketches</a>
-        <a class="link topnav_link" href="#process.html">process</a>
-        <a class="link topnav_link" href="#projects">projects</a>
-        <a class="link topnav_link" href="about.html">about</a>
-        <a class="link topnav_link fa icon" href="javascript:void(0);"
-            style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
-      </div>
+    <div class="topnav" id="myTopNav">
+      <a class="link topnav__link" href="index.html" style="float:left">LogoIcon</a>
+      <a class="link topnav__link disableClick" style="float:left"> | </a>
+      <a class="link topnav__link disableClick" style="float:left" >Shandira Ferguson</a>
+      <a class="link topnav__link" href="#linkedIn icon">in</a>
+      <a class="link topnav__link" href="#emailIcon">email</a>
+      <a class="link topnav__link" href="#pop-ups">pop-ups</a>
+      <a class="link topnav__link" href="#sketches">sketches</a>
+      <a class="link topnav__link" href="#process.html">process</a>
+      <a class="link topnav__link" href="#projects">projects</a>
+      <a class="link topnav__link" style="color: #F25D50;" href="about.html">about</a>
+      <a class="link topnav__link fa icon" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
+    </div>
 
-    <section class="sec intro-sec">
-      <div class="intro intro--img">
-          <h1 class="intro__h1">about me</h1>
-          <h2 class="intro_h2">I'm a UI/UX Software Engineer from the Bahamas!</h2>
-          <h3 class="intro_h3">I'm passionate about problem solving, design,
-            and advocating for the user. When I'm not coding, sketching, or
-            obsessing over Augmented Reality, you'll find me working out at the
-            gym, cooking, or at the nearest Carnival Festival. </h3>
+    <section class="intro">
+      <div class="col-xs-12">
+        <img class="avatar-image" src="assets/images/about/meImg.png" />
+        <h1 class="intro__h1">about me</h1>
+        <h2 class="intro__h2">I'm a UI/UX Software Engineer
+          from the Bahamas.</h2>
+        <h3 class="intro__h3">I'm passionate about problem solving, design,
+          and advocating for the user. When I'm not coding, sketching, or
+          obsessing over Augmented Reality, you'll find me working out at the
+          gym, cooking, or at the nearest Carnival Festival. </h3>
       </div>
+        <div class="col-xs-1"><img src="assets/images/about/pal-col-1.png" alt=""/></div>
+        <div class="col-xs-1"><img src="assets/images/about/pal-col-2.png" alt=""/></div>
+        <div class="col-xs-1"><img src="assets/images/about/pal-col-3.png" alt=""/></div>
+        <div class="col-xs-1"><img src="assets/images/about/pal-col-4.png" alt=""/></div>
+        <div class="col-xs-1"><img src="assets/images/about/pal-col-5.png" alt=""/></div>
     </section>
 
 
-
-    <footer class="footer">
-      <a style="float:left">c 2020 Shandira Ferguson</a>
-      <a href="#pop-ups">pop-ups</a>
-      <a href="#sketches">sketches</a>
-      <a href="#process">process</a>
-      <a href="#projects">projects</a>
-      <a href="#about">about</a>
-    </footer>
+    <!-- <footer class="footer">
+      <a class="link footer__link disableClick" style="float:left;
+        color: black;">c 2020 Shandira Ferguson <br> <span style="font-size:10px;
+        font-weight:lighter; float:right">Inspired by Adham Dannaway</span></a>
+      <div class="center-block">
+        <a class="link footer__link" href="#pop-ups">pop-ups</a>
+        <a class="link footer__link" href="#sketches">sketches</a>
+        <a class="link footer__link" href="#process">process</a>
+        <a class="link footer__link" href="#projects">projects</a>
+        <a class="link footer__link" href="#about">about</a>
+      </div>
+    </footer> -->
   </body>
 </html>
