--- a/process.html
+++ b/process.html
@@ -13,27 +13,31 @@
   <body>
 
     <div class="topnav" id="myTopNav">
-      <a class="link topnav_link" href="index.html" class="active" style="float:left">LogoIcon</a>
-      <a class="link topnav_link topnav__disableClick" style="float:left"> | </a>
-      <a class="link topnav_link topnav__disableClick" style="float:left" >Shandira Ferguson</a>
-      <a class="link topnav_link" href="#linkedIn icon">in</a>
-      <a class="link topnav_link" href="#emailIcon">email</a>
-      <a class="link topnav_link" href="#pop-ups">pop-ups</a>
-      <a class="link topnav_link" href="#sketches">sketches</a>
-      <a class="link topnav_link" href="#process.html">process</a>
-      <a class="link topnav_link" href="#projects">projects</a>
-      <a class="link topnav_link" href="about.html">about</a>
-      <a class="link topnav_link fa icon" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
+      <a class="link topnav__link" href="#icon" class="active" style="float:left">LogoIcon</a>
+      <a class="link topnav__link disableClick" style="float:left"> | </a>
+      <a class="link topnav__link disableClick" style="float:left" >Shandira Ferguson</a>
+      <a class="link topnav__link" href="#linkedIn icon">in</a>
+      <a class="link topnav__link" href="#emailIcon">email</a>
+      <a class="link topnav__link" href="#pop-ups">pop-ups</a>
+      <a class="link topnav__link" href="#sketches">sketches</a>
+      <a class="link topnav__link" href="#process.html">process</a>
+      <a class="link topnav__link" href="#projects">projects</a>
+      <a class="link topnav__link" href="about.html">about</a>
+      <a class="link topnav__link fa icon" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
     </div>
 
 
     <footer class="footer">
-      <a style="float:left">c 2020 Shandira Ferguson</a>
-      <a href="#pop-ups">pop-ups</a>
-      <a href="#sketches">sketches</a>
-      <a href="#process">process</a>
-      <a href="#projects">projects</a>
-      <a href="#about">about</a>
+      <a class="link footer__link disableClick" style="float:left;
+        color: black;">c 2020 Shandira Ferguson <br> <span style="font-size:10px;
+        font-weight:lighter; float:right">Inspired by Adham Dannaway</span></a>
+      <div class="center-block">
+        <a class="link footer__link" href="#pop-ups">pop-ups</a>
+        <a class="link footer__link" href="#sketches">sketches</a>
+        <a class="link footer__link" href="#process">process</a>
+        <a class="link footer__link" href="#projects">projects</a>
+        <a class="link footer__link" href="#about">about</a>
+      </div>
     </footer>
   </body>
 </html>
