--- a/about.html
+++ b/about.html
@@ -27,9 +27,9 @@
       <a class="link topnav__link fa icon" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
     </div>
 
-    <section class="intro">
+    <section>
       <div class="col-xs-12">
-        <img class="avatar-image" src="assets/images/about/meImg.png" />
+        <img class="avatar-image" src="assets/images/about/meImg.png"/>
         <h1 class="intro__h1">about me</h1>
         <h2 class="intro__h2">I'm a UI/UX Software Engineer
           from the Bahamas.</h2>
@@ -37,26 +37,53 @@
           and advocating for the user. When I'm not coding, sketching, or
           obsessing over Augmented Reality, you'll find me working out at the
           gym, cooking, or at the nearest Carnival Festival. </h3>
+        <div class="line" style="width: 91%"></div>
+        <section class="palette" style="padding-right:10%">
+          <div class="col-xs-1"><img src="assets/images/about/pal-col-1.png" alt=""/></div>
+          <div class="col-xs-1"><img src="assets/images/about/pal-col-2.png" alt=""/></div>
+          <div class="col-xs-1"><img src="assets/images/about/pal-col-3.png" alt=""/></div>
+          <div class="col-xs-1"><img src="assets/images/about/pal-col-4.png" alt=""/></div>
+          <div class="col-xs-1"><img src="assets/images/about/pal-col-5.png" alt=""/></div>
+        </section>
       </div>
-        <div class="col-xs-1"><img src="assets/images/about/pal-col-1.png" alt=""/></div>
-        <div class="col-xs-1"><img src="assets/images/about/pal-col-2.png" alt=""/></div>
-        <div class="col-xs-1"><img src="assets/images/about/pal-col-3.png" alt=""/></div>
-        <div class="col-xs-1"><img src="assets/images/about/pal-col-4.png" alt=""/></div>
-        <div class="col-xs-1"><img src="assets/images/about/pal-col-5.png" alt=""/></div>
     </section>
 
-
-    <!-- <footer class="footer">
-      <a class="link footer__link disableClick" style="float:left;
-        color: black;">c 2020 Shandira Ferguson <br> <span style="font-size:10px;
-        font-weight:lighter; float:right">Inspired by Adham Dannaway</span></a>
-      <div class="center-block">
-        <a class="link footer__link" href="#pop-ups">pop-ups</a>
-        <a class="link footer__link" href="#sketches">sketches</a>
-        <a class="link footer__link" href="#process">process</a>
-        <a class="link footer__link" href="#projects">projects</a>
-        <a class="link footer__link" href="#about">about</a>
+    <section>
+      <div class="col-xs-12">
+        Pie Chart
+        <img class="avatar-image" src="assets/images/about/Pie.png"/>
       </div>
-    </footer> -->
+    </section>
+
+    <section>
+      <div class="col-xs-12">
+        Random Facts
+        <img class="avatar-image" src="assets/images/about/lapImg.png"/>
+      </div>
+    </section>
+
+    <section>
+      <div class="col-xs-12">
+        Skills
+        <img class="avatar-image" src="assets/images/about/SkillsDiv.png"/>
+      </div>
+    </section>
+
+    <section>
+      <div class="col-xs-12" style="padding: 0%">
+      <footer class="footer">
+        <a class="link footer__link disableClick" style="float:left;
+          color: black;">c 2020 Shandira Ferguson <br> <span style="font-size:10px;
+          font-weight:lighter; float:right">Inspired by Adham Dannaway</span></a>
+        <div class="center-block">
+          <a class="link footer__link" href="#pop-ups">pop-ups</a>
+          <a class="link footer__link" href="#sketches">sketches</a>
+          <a class="link footer__link" href="#process">process</a>
+          <a class="link footer__link" href="#projects">projects</a>
+          <a class="link footer__link" href="#about">about</a>
+        </div>
+      </footer>
+      </div>
+    </section>
   </body>
 </html>
