about page changes
html + css files

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
       <a class="link topnav__link fa icon" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
     </div>
 
-    <section>
+    <section class="container">
       <div class="col-xs-12">
         <img class="avatar-image" src="assets/images/about/meImg.png"/>
         <h1 class="intro__h1">about me</h1>
@@ -37,8 +37,8 @@
           and advocating for the user. When I'm not coding, sketching, or
           obsessing over Augmented Reality, you'll find me working out at the
           gym, cooking, or at the nearest Carnival Festival. </h3>
-        <div class="line" style="width: 91%"></div>
-        <section class="palette" style="padding-right:10%">
+        <div class="line" style="width: 93%"></div>
+        <section class="palette">
           <div class="col-xs-1"><img src="assets/images/about/pal-col-1.png" alt=""/></div>
           <div class="col-xs-1"><img src="assets/images/about/pal-col-2.png" alt=""/></div>
           <div class="col-xs-1"><img src="assets/images/about/pal-col-3.png" alt=""/></div>
@@ -48,21 +48,21 @@
       </div>
     </section>
 
-    <section>
+    <section class="container">
       <div class="col-xs-12">
         Pie Chart
         <img class="avatar-image" src="assets/images/about/Pie.png"/>
       </div>
     </section>
 
-    <section>
+    <section class="container">
       <div class="col-xs-12">
         Random Facts
         <img class="avatar-image" src="assets/images/about/lapImg.png"/>
       </div>
     </section>
 
-    <section>
+    <section class="container">
       <div class="col-xs-12">
         Skills
         <img class="avatar-image" src="assets/images/about/SkillsDiv.png"/>
