--- a/about.html
+++ b/about.html
@@ -27,23 +27,23 @@
       <a class="link topnav__link fa icon" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
     </div>
 
-    <section class="container">
+    <section class="text container">
       <div class="col-xs-12">
         <img class="avatar-image" src="assets/images/about/meImg.png"/>
-        <h1 class="intro__h1">about me</h1>
+        <h1 class="intro__h1" style="padding-top:2px">about me</h1>
         <h2 class="intro__h2">I'm a UI/UX Software Engineer
-          from the Bahamas.</h2>
+          from the beautiful islands of the Bahamas.</h2>
         <h3 class="intro__h3">I'm passionate about problem solving, design,
           and advocating for the user. When I'm not coding, sketching, or
           obsessing over Augmented Reality, you'll find me working out at the
           gym, cooking, or at the nearest Carnival Festival. </h3>
         <div class="line" style="width: 93%"></div>
         <section class="palette">
-          <div class="col-xs-1"><img src="assets/images/about/pal-col-1.png" alt=""/></div>
-          <div class="col-xs-1"><img src="assets/images/about/pal-col-2.png" alt=""/></div>
-          <div class="col-xs-1"><img src="assets/images/about/pal-col-3.png" alt=""/></div>
-          <div class="col-xs-1"><img src="assets/images/about/pal-col-4.png" alt=""/></div>
-          <div class="col-xs-1"><img src="assets/images/about/pal-col-5.png" alt=""/></div>
+          <div class="col-sm-1"><img src="assets/images/about/pal-col-1.png" alt=""/></div>
+          <div class="col-sm-1"><img src="assets/images/about/pal-col-2.png" alt=""/></div>
+          <div class="col-sm-1"><img src="assets/images/about/pal-col-3.png" alt=""/></div>
+          <div class="col-sm-1"><img src="assets/images/about/pal-col-4.png" alt=""/></div>
+          <div class="col-sm-1"><img src="assets/images/about/pal-col-5.png" alt=""/></div>
         </section>
       </div>
     </section>
