--- a/about.html
+++ b/about.html
@@ -30,10 +30,10 @@
     <section class="text container">
       <div class="col-xs-12">
         <img class="avatar-image" src="assets/images/about/meImg.png"/>
-        <h1 class="intro__h1" style="padding-top:2px">about me</h1>
-        <h2 class="intro__h2">I'm a UI/UX Software Engineer
+        <h1 class="text__h1" style="padding-top:2px">about me</h1>
+        <h2 class="text__h2">I'm a UI/UX Software Engineer
           from the beautiful islands of the Bahamas.</h2>
-        <h3 class="intro__h3">I'm passionate about problem solving, design,
+        <h3 class="text__h3">I'm passionate about problem solving, design,
           and advocating for the user. When I'm not coding, sketching, or
           obsessing over Augmented Reality, you'll find me working out at the
           gym, cooking, or at the nearest Carnival Festival. </h3>
@@ -49,23 +49,44 @@
     </section>
 
     <section class="container">
-      <div class="col-xs-12">
-        Pie Chart
-        <img class="avatar-image" src="assets/images/about/Pie.png"/>
+      <div class="container__sec col-xs-12">
+        <div class="col-xs-12 col-md-4" style="box-shadow:none">
+        <ul class="list list--coder text">
+          <li class="text__h3 list__title">Part Coder</li>
+          <li class="list__elem">Front-end development</li>
+          <li class="list__elem">JavaScript</li>
+          <li class="list__elem">Debugging</li>
+          <li class="list__elem">Drinking Coffee</li>
+          <li class="list__elem">Sleep deprivation</li>
+        </ul>
+        </div>
+        <div class="col-xs-12 col-md-4" style="box-shadow:none">
+          <img class="avatar-image pie-img " src="assets/images/about/Pie.png"/>
+        </div>
+        <div class="col-xs-12 col-md-4" style="box-shadow:none">
+          <ul class="list list--designer text">
+            <li class="text__h3 list__title">Part Designer</li>
+            <li class="list__elem">UX design</li>
+            <li class="list__elem">UI design</li>
+            <li class="list__elem">UX research</li>
+            <li class="list__elem">Prototyping</li>
+            <li class="list__elem">2D|3D Animation</li>
+          </ul>
+        </div>
       </div>
     </section>
 
     <section class="container">
-      <div class="col-xs-12">
-        Random Facts
-        <img class="avatar-image" src="assets/images/about/lapImg.png"/>
+      <div class="container__sec col-xs-12">
+        <img class="avatar-image desktop-img" src="assets/images/about/lapImg.png"/>
+        <h2 class="text__h2">Random Facts</h2>
       </div>
     </section>
 
     <section class="container">
-      <div class="col-xs-12">
-        Skills
-        <img class="avatar-image" src="assets/images/about/SkillsDiv.png"/>
+      <div class="container__sec col-xs-12">
+        <h2 class="text__h2"> My Skills</h2>
+        <img class="avatar-image level-img" src="assets/images/about/SkillsDiv.png"/>
       </div>
     </section>
 
