--- a/process.html
+++ b/process.html
@@ -12,32 +12,125 @@
   </head>
   <body>
 
-    <div class="topnav" id="myTopNav">
-      <a class="link topnav__link" href="#icon" class="active" style="float:left">LogoIcon</a>
-      <a class="link topnav__link disableClick" style="float:left"> | </a>
-      <a class="link topnav__link disableClick" style="float:left" >Shandira Ferguson</a>
-      <a class="link topnav__link" href="#linkedIn icon">in</a>
-      <a class="link topnav__link" href="#emailIcon">email</a>
-      <a class="link topnav__link" href="#pop-ups">pop-ups</a>
-      <a class="link topnav__link" href="#sketches">sketches</a>
-      <a class="link topnav__link" href="#process.html">process</a>
-      <a class="link topnav__link" href="#projects">projects</a>
-      <a class="link topnav__link" href="about.html">about</a>
-      <a class="link topnav__link fa icon" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
-    </div>
-
-
-    <footer class="footer">
-      <a class="link footer__link disableClick" style="float:left;
-        color: black;">c 2020 Shandira Ferguson <br> <span style="font-size:10px;
-        font-weight:lighter; float:right">Inspired by Adham Dannaway</span></a>
-      <div class="center-block">
-        <a class="link footer__link" href="#pop-ups">pop-ups</a>
-        <a class="link footer__link" href="#sketches">sketches</a>
-        <a class="link footer__link" href="#process">process</a>
-        <a class="link footer__link" href="#projects">projects</a>
-        <a class="link footer__link" href="#about">about</a>
+      <div class="topnav" id="myTopNav">
+        <a class="link topnav__link" href="index.html" class="active" style="float:left">LogoIcon</a>
+        <a class="link topnav__link disableClick" style="float:left"> | </a>
+        <a class="link topnav__link disableClick" style="float:left" >Shandira Ferguson</a>
+        <a class="link topnav__link" href="#linkedIn icon">in</a>
+        <a class="link topnav__link" href="#emailIcon">email</a>
+        <a class="link topnav__link" href="#pop-ups">pop-ups</a>
+        <a class="link topnav__link" href="#sketches">sketches</a>
+        <a class="link topnav__link" style="color: #F25D50;" href="process.html">process</a>
+        <a class="link topnav__link" href="#projects">projects</a>
+        <a class="link topnav__link" href="about.html">about</a>
+        <a class="link topnav__link fa icon" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
       </div>
-    </footer>
+
+    <section>
+      <div class="col-xs-12">
+        <img class="process-headline-img" src="assets/images/process/ProcessImgHeader.png"/>
+      </div>
+    </section>
+
+    <section class="container">
+      <div class="col-xs-12 container__sec">
+        <div class="list--process">
+          <img class="avatar-image process-img" src="assets/images/process/TyImg.png"/>
+          <div class="list--container list--process">
+            <ul class="list__process">
+              <li class="text__h3 list__title">Abstract meets Soul</li>
+              <li class="list__elem">Assignment type</li>
+              <li class="list__elem">Music</li>
+              <li class="list__elem">Software/tools used</li>
+              <li class="list__elem">Course info</li>
+              <li class="list__elem">Instructor</li>
+              <li class="list__elem">Term</li>
+            </ul>
+
+            <ul class="list__process" style="padding-top:56px">
+              <li class="list__elem">Rotoscoping</li>
+              <li class="list__elem">Rough Soul - Gold Link ft. April George</li>
+              <li class="list__elem">Pastel Crayons, Camera, Dragonframe</li>
+              <li class="list__elem">Intro to Film Graphics - Animation</li>
+              <li class="list__elem">Elisabeth Mann</li>
+              <li class="list__elem">Spring 2017</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="container">
+      <div class="col-xs-12 container__sec">
+        <div class="list--process">
+          <img class="avatar-image process-img" src="assets/images/process/BobImg.png"/>
+          <div class="list--container list--process">
+            <ul class="list__process">
+              <li class="text__h3 list__title">King of Reggae</li>
+              <li class="list__elem">Assignment type</li>
+              <li class="list__elem">Music</li>
+              <li class="list__elem">Software/tools used</li>
+              <li class="list__elem">Course info</li>
+              <li class="list__elem">Instructor</li>
+              <li class="list__elem">Term</li>
+            </ul>
+
+            <ul class="list__process" style="padding-top:56px">
+              <li class="list__elem">Armature skeleton animation</li>
+              <li class="list__elem">Is this love - Bob Marley</li>
+              <li class="list__elem">Wires, clay, yarn, fabric, Dragonframe</li>
+              <li class="list__elem">Intro to Film Graphics - Animation</li>
+              <li class="list__elem">Elisabeth Mann</li>
+              <li class="list__elem">Spring 2017</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="container">
+      <div class="col-xs-12 container__sec">
+        <div class="list--process">
+          <img class="avatar-image process-img" src="assets/images/process/BabiesImg.png"/>
+          <div class="list--container list--process">
+            <ul class="list__process">
+              <li class="text__h3 list__title">Boogie babies</li>
+              <li class="list__elem">Assignment type</li>
+              <li class="list__elem">Music</li>
+              <li class="list__elem">Software/tools used</li>
+              <li class="list__elem">Course info</li>
+              <li class="list__elem">Instructor</li>
+              <li class="list__elem">Term</li>
+            </ul>
+
+            <ul class="list__process" style="padding-top:56px">
+              <li class="list__elem">Paper layer animation</li>
+              <li class="list__elem">24K Magic - Bruno Mars</li>
+              <li class="list__elem">Const. paper, glass mounts, Dragonframe</li>
+              <li class="list__elem">Intro to Film Graphics - Animation</li>
+              <li class="list__elem">Elisabeth Mann</li>
+              <li class="list__elem">Spring 2017</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="col-xs-12" style="padding: 0%">
+      <footer class="footer">
+        <a class="link footer__link disableClick" style="float:left;
+          color: black;">c 2020 Shandira Ferguson <br> <span style="font-size:10px;
+          font-weight:lighter; float:right">Inspired by Adham Dannaway</span></a>
+        <div class="center-block">
+          <a class="link footer__link" href="#pop-ups">pop-ups</a>
+          <a class="link footer__link" href="#sketches">sketches</a>
+          <a class="link footer__link" href="#process">process</a>
+          <a class="link footer__link" href="#projects">projects</a>
+          <a class="link footer__link" href="#about">about</a>
+        </div>
+      </footer>
+      </div>
+    </section>
   </body>
 </html>
