--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
       <a class="link topnav__link" href="#emailIcon">email</a>
       <a class="link topnav__link" href="#pop-ups">pop-ups</a>
       <a class="link topnav__link" href="#sketches">sketches</a>
-      <a class="link topnav__link" href="#process.html">process</a>
+      <a class="link topnav__link" href="process.html">process</a>
       <a class="link topnav__link" href="#projects">projects</a>
       <a class="link topnav__link" style="color: #F25D50;" href="about.html">about</a>
       <a class="link topnav__link fa icon" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
@@ -51,17 +51,17 @@
     <section class="container">
       <div class="container__sec col-xs-12">
         <div class="col-xs-12 col-md-4" style="box-shadow:none">
-        <ul class="list list--coder text">
-          <li class="text__h3 list__title">Part Coder</li>
-          <li class="list__elem">Front-end development</li>
-          <li class="list__elem">JavaScript</li>
-          <li class="list__elem">Debugging</li>
-          <li class="list__elem">Drinking Coffee</li>
-          <li class="list__elem">Sleep deprivation</li>
-        </ul>
+          <ul class="list list--coder text">
+            <li class="text__h3 list__title">Part Coder</li>
+            <li class="list__elem">Front-end development</li>
+            <li class="list__elem">JavaScript</li>
+            <li class="list__elem">Debugging</li>
+            <li class="list__elem">Drinking Coffee</li>
+            <li class="list__elem">Sleep deprivation</li>
+          </ul>
         </div>
         <div class="col-xs-12 col-md-4" style="box-shadow:none">
-          <img class="avatar-image pie-img " src="assets/images/about/Pie.png"/>
+          <img class="avatar-image pie-img" src="assets/images/about/Pie.png"/>
         </div>
         <div class="col-xs-12 col-md-4" style="box-shadow:none">
           <ul class="list list--designer text">
