--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a class="link topnav__link" href="#emailIcon">email</a>
       <a class="link topnav__link" href="#pop-ups">pop-ups</a>
       <a class="link topnav__link" href="#sketches">sketches</a>
-      <a class="link topnav__link" href="#process.html">process</a>
+      <a class="link topnav__link" href="process.html">process</a>
       <a class="link topnav__link" href="#projects">projects</a>
       <a class="link topnav__link" href="about.html">about</a>
       <a class="link topnav__link fa icon" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
