Random facts added
About page edits

--- a/about.html
+++ b/about.html
@@ -1,85 +1,105 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Final Project for HTML5/CSS3 Course">
-    <meta name="keywords" content="HTML,CSS,JavaScript,jQuery">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Shandira Ferguson | UI/UX Designer & Software Engineer </title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="./assets/stylesheets/styles.css"/>
-    <script src="./assets/javascripts/responsive-nav-bar.js"></script>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="description" content="Final Project for HTML5/CSS3 Course">
+  <meta name="keywords" content="HTML,CSS,JavaScript,jQuery">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Shandira Ferguson | UI/UX Designer & Software Engineer </title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/styles.css"/>
+  <script src="./assets/javascripts/responsive-nav-bar.js"></script>
+</head>
 
-  <body>
+<body>
 
-    <div class="topnav" id="myTopNav">
-      <a class="link topnav__link" href="index.html" style="float:left">LogoIcon</a>
-      <a class="link topnav__link disableClick" style="float:left"> | </a>
-      <a class="link topnav__link disableClick" style="float:left" >Shandira Ferguson</a>
-      <a class="link topnav__link" href="#linkedIn icon">in</a>
-      <a class="link topnav__link" href="#emailIcon">email</a>
-      <a class="link topnav__link" href="#pop-ups">pop-ups</a>
-      <a class="link topnav__link" href="#sketches">sketches</a>
-      <a class="link topnav__link" href="process.html">process</a>
-      <a class="link topnav__link" href="#projects">projects</a>
-      <a class="link topnav__link" style="color: #F25D50;" href="about.html">about</a>
-      <a class="link topnav__link fa icon" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
-    </div>
+  <div class="topnav" id="myTopNav">
+    <a class="link topnav__link" href="index.html" style="float:left">LogoIcon</a>
+    <a class="link topnav__link disableClick" style="float:left"> | </a>
+    <a class="link topnav__link disableClick" style="float:left" >Shandira Ferguson</a>
+    <a class="link topnav__link" href="#linkedIn icon">in</a>
+    <a class="link topnav__link" href="#emailIcon">email</a>
+    <a class="link topnav__link" href="#pop-ups">pop-ups</a>
+    <a class="link topnav__link" href="#sketches">sketches</a>
+    <a class="link topnav__link" href="process.html">process</a>
+    <a class="link topnav__link" href="#projects">projects</a>
+    <a class="link topnav__link" style="color: #F25D50;" href="about.html">about</a>
+    <a class="link topnav__link fa icon" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
+  </div>
 
-    <section class="text container">
-      <div class="col-xs-12">
-        <img class="avatar-image" src="assets/images/about/meImg.png"/>
-        <h1 class="text__h1" style="padding-top:2px">about me</h1>
-        <h2 class="text__h2">I'm a UI/UX Software Engineer
-          from the beautiful islands of the Bahamas.</h2>
+  <section class="text container">
+    <div class="col-xs-12">
+      <img class="avatar-image" src="assets/images/about/meImg.png"/>
+      <h1 class="text__h1" style="padding-top:2px">about me</h1>
+      <h2 class="text__h2">I'm a UI/UX Software Engineer
+        from the beautiful islands of the Bahamas.</h2>
         <h3 class="text__h3">I'm passionate about problem solving, design,
           and advocating for the user. When I'm not coding, sketching, or
           obsessing over Augmented Reality, you'll find me working out at the
           gym, cooking, or at the nearest Carnival Festival. </h3>
-        <div class="line" style="width: 93%"></div>
-        <section class="palette">
-          <div class="col-sm-1"><img src="assets/images/about/pal-col-1.png" alt=""/></div>
-          <div class="col-sm-1"><img src="assets/images/about/pal-col-2.png" alt=""/></div>
-          <div class="col-sm-1"><img src="assets/images/about/pal-col-3.png" alt=""/></div>
-          <div class="col-sm-1"><img src="assets/images/about/pal-col-4.png" alt=""/></div>
-          <div class="col-sm-1"><img src="assets/images/about/pal-col-5.png" alt=""/></div>
-        </section>
-      </div>
-    </section>
+          <div class="line" style="width: 93%"></div>
+          <section class="palette">
+            <div class="col-sm-1"><img src="assets/images/about/pal-col-1.png" alt=""/></div>
+            <div class="col-sm-1"><img src="assets/images/about/pal-col-2.png" alt=""/></div>
+            <div class="col-sm-1"><img src="assets/images/about/pal-col-3.png" alt=""/></div>
+            <div class="col-sm-1"><img src="assets/images/about/pal-col-4.png" alt=""/></div>
+            <div class="col-sm-1"><img src="assets/images/about/pal-col-5.png" alt=""/></div>
+          </section>
+        </div>
+      </section>
 
-    <section class="container">
-      <div class="container__sec col-xs-12">
-        <div class="col-xs-12 col-md-4" style="box-shadow:none">
-          <ul class="list list--coder text">
-            <li class="text__h3 list__title">Part Coder</li>
-            <li class="list__elem">Front-end development</li>
-            <li class="list__elem">JavaScript</li>
-            <li class="list__elem">Debugging</li>
-            <li class="list__elem">Drinking Coffee</li>
-            <li class="list__elem">Sleep deprivation</li>
-          </ul>
+      <section class="container">
+        <div class="container__sec col-xs-12">
+          <div class="col-xs-12 col-md-4" style="box-shadow:none">
+            <ul class="list list--coder text">
+              <li class="text__h3 list__title">Part Coder</li>
+              <li class="list__elem">Front-end development</li>
+              <li class="list__elem">JavaScript</li>
+              <li class="list__elem">Debugging</li>
+              <li class="list__elem">Drinking Coffee</li>
+              <li class="list__elem">Sleep deprivation</li>
+            </ul>
+          </div>
+          <div class="col-xs-12 col-md-4" style="box-shadow:none">
+            <img class="avatar-image pie-img" src="assets/images/about/Pie.png"/>
+          </div>
+          <div class="col-xs-12 col-md-4" style="box-shadow:none">
+            <ul class="list list--designer text">
+              <li class="text__h3 list__title">Part Designer</li>
+              <li class="list__elem">UX design</li>
+              <li class="list__elem">UI design</li>
+              <li class="list__elem">UX research</li>
+              <li class="list__elem">Prototyping</li>
+              <li class="list__elem">2D|3D Animation</li>
+            </ul>
+          </div>
         </div>
-        <div class="col-xs-12 col-md-4" style="box-shadow:none">
-          <img class="avatar-image pie-img" src="assets/images/about/Pie.png"/>
-        </div>
-        <div class="col-xs-12 col-md-4" style="box-shadow:none">
-          <ul class="list list--designer text">
-            <li class="text__h3 list__title">Part Designer</li>
-            <li class="list__elem">UX design</li>
-            <li class="list__elem">UI design</li>
-            <li class="list__elem">UX research</li>
-            <li class="list__elem">Prototyping</li>
-            <li class="list__elem">2D|3D Animation</li>
-          </ul>
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <section class="container">
+      <!-- <section class="container">
       <div class="container__sec col-xs-12">
+      <img class="avatar-image desktop-img" src="assets/images/about/lapImg.png"/>
+      <h2 class="text__h2">Random Facts</h2>
+    </div>
+  </section> -->
+
+  <section class="container">
+    <div class="col-xs-12 container__sec">
+      <div class="list--process">
         <img class="avatar-image desktop-img" src="assets/images/about/lapImg.png"/>
-        <h2 class="text__h2">Random Facts</h2>
+        <div class="list--container list--process">
+          <ul class="list__process">
+            <li class="text__h3 list__title">Random facts</li>
+            <li class="list__elem">God is my everything <3 </li>
+              <li class="list__elem">Dancing is my happy place</li>
+              <li class="list__elem">I love to laugh and make others laugh</li>
+              <li class="list__elem">I'm a great story teller (or so I've been told)</li>
+              <li class="list__elem"><u>Conch Salad</u> is my obsession</li>
+              <li class="list__elem">Christmas season makes me excited</li>
+              <li class="list__elem"><u>Soca</u> is my favorite genre</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -92,19 +112,19 @@
 
     <section>
       <div class="col-xs-12" style="padding: 0%">
-      <footer class="footer">
-        <a class="link footer__link disableClick" style="float:left;
+        <footer class="footer">
+          <a class="link footer__link disableClick" style="float:left;
           color: black;">c 2020 Shandira Ferguson <br> <span style="font-size:10px;
           font-weight:lighter; float:right">Inspired by Adham Dannaway</span></a>
-        <div class="center-block">
-          <a class="link footer__link" href="#pop-ups">pop-ups</a>
-          <a class="link footer__link" href="#sketches">sketches</a>
-          <a class="link footer__link" href="#process">process</a>
-          <a class="link footer__link" href="#projects">projects</a>
-          <a class="link footer__link" href="#about">about</a>
-        </div>
-      </footer>
+          <div class="center-block">
+            <a class="link footer__link" href="#pop-ups">pop-ups</a>
+            <a class="link footer__link" href="#sketches">sketches</a>
+            <a class="link footer__link" href="#process">process</a>
+            <a class="link footer__link" href="#projects">projects</a>
+            <a class="link footer__link" href="#about">about</a>
+          </div>
+        </footer>
       </div>
     </section>
   </body>
-</html>
+  </html>
